# stockQ

./: .gitignore  CLAUDE.md  README.md  architecture.md  commands.md  workflow.md
.claude/: settings.local.json
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: b1fea12c1b5e_initial.py
api/app/: auth.py  config.py  database.py  main.py  redis.py  storage.py
api/app/models/: __init__.py  daily_bar.py  dataset.py  order.py  portfolio_snapshot.py  position.py  run.py  run_log.py  run_metric.py  strategy.py  strategy_file.py  strategy_validation.py  symbol.py  user.py
api/app/repositories/: __init__.py
api/app/routes/: auth.py  candles.py  datasets.py  health.py  leaderboard.py  runs.py  strategies.py  symbols.py  watchlist.py
api/app/schemas/: __init__.py  auth.py  common.py  daily_bar.py  dataset.py  order.py  portfolio_snapshot.py  position.py  run.py  run_log.py  run_metric.py  strategy.py  symbol.py
api/app/services/: execution.py  feedback.py  market_data.py  scoring.py  simulation.py  strategy.py  validation.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/runs/[id]/: client.tsx  page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/: navbar.tsx
frontend/src/lib/: api.ts  auth.tsx  query-provider.tsx  types.ts  utils.ts
